[4.4.8. 로그인 Ajax 구현 & CSRF] 코드 구현 및 시나리오 테스트 완료

--- a/security-ajax-auth/src/main/resources/application.yml
+++ b/security-ajax-auth/src/main/resources/application.yml
@@ -41,3 +41,8 @@ spring:
             non_contextual_creation: true
   thymeleaf:
     cache: false
+
+logging:
+  level:
+    springframework: debug
+
