--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'security-basic-api'
 include 'security-form-auth'
 include 'security-ajax-auth'
 include 'security-delegate'
+include 'security-db-auth'
 
